Footer fixes.
Too short content fix.

--- a/wp-content/themes/fredriksdal/assets/source/sass/layout/footer.scss
+++ b/wp-content/themes/fredriksdal/assets/source/sass/layout/footer.scss
@@ -2,6 +2,8 @@
 footer.main-footer {
     background-color: $palette-2;
     color: #000;
+    margin-top: 0;
+    box-shadow: none;
 
     a,a:hover,a:active,a:visited {
         color: #000;
@@ -29,4 +31,37 @@ footer.main-footer {
             margin-top: 30px;
         }
     }
+
+    @media screen and (max-width: #{$screen-sm-max}) {
+
+        [class*="modularity-mod-"] {
+
+            &:nth-child(3n) {
+                order: 3;
+                text-align: center;
+            }
+
+            &:nth-child(3n+1) {
+                order: 2;
+                text-align: center;
+                margin-bottom: 30px;
+            }
+
+            &:nth-child(3n+2) {
+                order: 1;
+                margin-bottom: 40px;
+            }
+
+            img {
+                width: 60%;
+            }
+
+            p + h3 {
+                margin-top: 40px;
+            }
+
+        }
+
+    }
+
 }
