--- a/wp-content/themes/fredriksdal/assets/source/sass/master.scss
+++ b/wp-content/themes/fredriksdal/assets/source/sass/master.scss
@@ -1,5 +1,5 @@
 html {
-    //background: $black; //Fixes issues of color in footer, when page is to "short".
+    background: $palette-2; //Fixes issues of color in footer, when page is to "short".
 }
 
 html.video-is-playing {
